--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Create your canvas element here -->
     <canvas id="my-canvas"></canvas>
 
+    <h1 id="gameover-screen" style="display: none">YOU LOST</h1>
+
     <!-- Link your js file here -->
     <script src="script.js"></script>
   </body>
